--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@types/react-router": "^5.0.1",
     "@types/react-router-dom": "^4.3.3",
     "@types/redux-form": "^8.1.3",
+    "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
+    "react-router": "^5.0.1",
     "react-scripts-ts": "3.1.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.2.3",
